# julius-baer-side-quest

submissions/heokieee/: MODERNIZATION_COMPARISON.md  SOLUTION_SUMMARY.md  banking_cli.py  banking_client.py  readme.md  requirements.txt  test_banking_client.py
submissions/heokieee/examples/: async_usage.py  basic_usage.py  cli_examples.sh
submissions/issacj-17/: pyproject.toml
submissions/issacj-17/challenge/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  example_async.py  pyproject.toml  pytest.ini
submissions/issacj-17/challenge/src/challenge/: __init__.py  client.py
submissions/issacj-17/challenge/src/transfer_client/: __init__.py  async_client.py  auth.py  cli.py  client.py  config.py  validators.py
submissions/issacj-17/challenge/tests/: __init__.py  conftest.py  test_auth.py  test_client.py  test_config.py  test_validators.py
