[project]
name = "challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "issacj-17", email = "68261814+issacj-17@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
challenge = "challenge:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
